--- a/style.css
+++ b/style.css
@@ -1,46 +1,83 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-image:url(https://img.freepik.com/premium-photo/cars-parking-lot-evening-light-sun_150893-219.jpg?w=2000)
+  margin: 0;
+  padding: 0;
+  /* background-image:url(https://img.freepik.com/premium-photo/cars-parking-lot-evening-light-sun_150893-219.jpg?w=2000) */
 
-    }
-  .h1 {
-      font-size: 4em;
-      color:black;
-      text-align: center;
-    }
-  .h2 {
+  }
+#header {
+  background-color: aqua;
+}  
+
+#h1 {
     font-size: 4em;
     color:black;
     text-align: center;
   }
+#h4 {
+  font-size: 2em;
+  color:black;
+  text-align: center;
+}
+#h3 {
+  font-size: 2em;
+
+}
+
+ div {
+  display: inline
+ }
+
+ul {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 2em;
+}
+
+
+ul li {
+  display: inline;
+  margin-right: 10px;
   
-   div {
-    display: inline
-   }
+} 
+#smart-parking-main-box {
+  width: 100%;
+  display: flex;
+}
 
-  ul {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
+#park-name-box {
+  width: 50%;
+}
+
+#park-name-details-box {
+  width: 50%;
+ 
+}  
+
+#name {
+  font-size: 2em;
 
 
-  ul li {
-    display: inline;
-    margin-right: 10px;
-    
-  }
-
-  #parkname-details{
-    text-align: center;
-    font-size: 20px;
-
-  }
-   
-  .button {
-    display :flex;
-    justify-content: center;
-  }
-
+}
+#Availablespaces {
+  font-size: 2em;
   
+}
+#Fee {
+  font-size: 2em;
+
+}
+#Openinghours {
+  font-size: 2em;
+}
+ 
+/* #button {
+  display :flex;
+  justify-content: center;
+} */
+
+#park-name {
+  display: block;
+  font-size: 2em;
+  color:black ;
+}
