changed the background image

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("https://img.buildings.com/files/base/ebm/buildings/image/2022/05/1652201376478-smartparking_hero_1000.png?auto=format,compress&fit=crop&h=278&w=500&q=45");
+  background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/14545/production/_99596238_gettyimages-139708783.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 
